welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:24: error: '<-' expected but integer literal found.
     for(i 1 to 5){avance()}             		
           ^MethodsPicture:25: error: illegal start of simple expression
}
^